--- a/02.md
+++ b/02.md
@@ -1,6 +1,6 @@
 # Grade
 
-Buatlah script untuk menentukan suatu nilai dengan ketentuan berikut; dengan menggunakan `prompt()`:
+Buatlah script untuk menentukan suatu nilai dengan ketentuan berikut:
 
 1) Jika nilai yang dimasukkan lebih besar dan sama dengan 90 maka output yang keluar adalah __A__.
 2) Jika nilai yang dimasukkan lebih besar dan sama dengan 80; dan lebih kecil dan sama dengan 89, maka output yang keluar adalah __B__.
