--- a/03.md
+++ b/03.md
@@ -1,6 +1,6 @@
 # Ganjil atau Genap?
 
-Buatlah script untuk menentukan suatu angka merupakan bilangan ganjil atau genap; dengan menggunakan `prompt()`.
+Buatlah script untuk menentukan suatu angka merupakan bilangan ganjil atau genap.
 
 ## Contoh:
 
