--- a/04.md
+++ b/04.md
@@ -1,6 +1,6 @@
 # Kabisat
 
-Buatlah script untuk menentukan suatu tahun merupakan tahun kabisat atau bukan; dengan menggunakan `prompt()`.
+Buatlah script untuk menentukan suatu tahun merupakan tahun kabisat atau bukan.
 
 ### Contoh:
 
